# Finance-Tracker

./: .gitignore  README.md  app.py  pyproject.toml  run.py
src/finance_tracker/: __init__.py  __main__.py  cli.py  database.py  demo.py  models.py  money.py  repository.py  services.py  translations.py  web.py
static/css/: styles.css
templates/: base.html  dashboard.html  demo.html  docs.html  home.html  login.html  register.html
tests/: test_service.py
