[project]
name = "finance-tracker"
version = "0.1.0"
description = "Personal finance tracker focused on expenses, categories and monthly summaries."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Flask>=3.1.3",
]
authors = [
  { name = "Rafael" }
]

[project.scripts]
finance-tracker = "finance_tracker.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
